deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: granite
  namespace: rhaiis
  labels:
    app: granite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: granite
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: granite
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: rh-registry
      containers:
        - resources:
            limits:
              cpu: '10'
              memory: 16Gi
              nvidia.com/gpu: '1'
            requests:
              cpu: '2'
              memory: 6Gi
              nvidia.com/gpu: '1'
          name: granite
          command:
            - python
            - '-m'
            - vllm.entrypoints.openai.api_server
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: model-volume
              mountPath: /model
            - name: shm
              mountPath: /dev/shm
          image: 'registry.redhat.io/rhaiis/vllm-cuda-rhel9:3.0.0'
          args:
            - '--port=8000'
            - '--model=/model'
            - '--served-model-name=granite-3-1-8b-instruct-quantized-w8a8'
            - '--tensor-parallel-size=1'
            - '--dtype=auto'
            - '--max-model-len=65536'
            - '--gpu-memory-utilization=0.95'
      volumes:
        - name: model-volume
          persistentVolumeClaim:
            claimName: model-cache
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 2Gi
        - name: oci-auth
          secret:
            secretName: rh-registry
            items:
              - key: .dockerconfigjson

                path: config.json
